Fix overflow brani musicali

--- a/WebSite/WebSite/wwwroot/css/site.css
+++ b/WebSite/WebSite/wwwroot/css/site.css
@@ -398,6 +398,6 @@ main > section:first-child {
         color: var(--accent-color);
     }
 
-.songs-list li {
-    white-space: pre;
+.songs-list li p {
+    padding: 0;
 }
